--- a/Assignment_10.ipynb
+++ b/Assignment_10.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "1. What is the role of try and exception block?\n",
         "\n",
-        "**Answer:** The try block is used to try out an operation irespective of any failures and then catch any form of exception in exception block, thereby leading to better handling of errors."
+        "**Answer:** The try block is used to try out an operation irrespective of any failures and then catch any form of exception in exception block, thereby leading to better handling of errors."
       ],
       "metadata": {
         "id": "HS5KWO3dL9Lc"
@@ -70,9 +70,9 @@
         "\n",
         "**Answer:** A bare except block will catch all the errors irrespective of the type of error.\n",
         "\n",
-        "Whereas if we define a specific exception type then it will catch only the defined type of exceptions and the otehr type of err will be unhandled.\n",
+        "Whereas if we define a specific exception type then it will catch only the defined type of exceptions and the other type of error will be unhandled.\n",
         "\n",
-        "Below defined is the example for both in notbare_exception() method we can see that exception has not been handled and the functon throws error."
+        "Below defined is the example for both in notbare_exception() method we can see that exception has not been handled and the function throws error."
       ],
       "metadata": {
         "id": "tBDRDJmIOQEz"
