--- a/Assignment_10.ipynb
+++ b/Assignment_10.ipynb
@@ -72,7 +72,7 @@
         "\n",
         "Whereas if we define a specific exception type then it will catch only the defined type of exceptions and the other type of error will be unhandled.\n",
         "\n",
-        "Below defined is the example for both in notbare_exception() method we can see that exception has not been handled and the function throws error."
+        "Below defined is the example for both, in notbare_exception() method we can see that exception has not been handled and the function throws an error."
       ],
       "metadata": {
         "id": "tBDRDJmIOQEz"
