--- a/02_July_OOPs.ipynb
+++ b/02_July_OOPs.ipynb
@@ -19,9 +19,9 @@
       "source": [
         "1. Explain what inheritance is in object-oriented programming and why it is used.\n",
         "\n",
-        "**Answer:** Inheritance in OOP refers to inheriting of methods and properties of a parent class or base class from a child class. We can use the cencept of inheritance when there exists a relationship between the two classes i.e. parent and child.\n",
+        "**Answer:** Inheritance in OOP refers to inheriting of methods and properties of a parent class or base class from a child class. We can use the concept of inheritance when there exists a relationship between the two classes i.e. parent and child.\n",
         "\n",
-        "It is used to maintain the re-usability of the code, the child class can access all the properties of its parent class thereby reducing the taks of re-creation."
+        "It is used to maintain the re-usability of the code, the child class can access all the properties of its parent class thereby reducing the task of re-creation."
       ],
       "metadata": {
         "id": "WIn5wyXKsu1D"
@@ -33,9 +33,9 @@
         "2. Discuss the concept of single inheritance and multiple inheritance, highlighting their\n",
         "differences and advantages.\n",
         "\n",
-        "**Answer:** Single Inheritance implies that a dervied class can inherit properties of a single parent class and thereby resuing the items of parent class and that leads to a faster execution time because of less number of heads.\n",
+        "**Answer:** Single Inheritance implies that a derived class can inherit properties of a single parent class and thereby reusing the items of the parent class and that leads to a faster execution time because of less number of heads.\n",
         "\n",
-        "Whereas Multiple Inheritance implies that a dervied class can inherit properties of multiple parent classes and thereby resuing the items of multiple parent classes leading to more reusability but it also leads to more complexity because of more number of heads."
+        "Whereas Multiple Inheritance implies that a derived class can inherit properties of multiple parent classes and thereby reusing the items of multiple parent classes leading to more reusability but it also leads to more complexity because of more number of heads."
       ],
       "metadata": {
         "id": "kA37MGGA4yep"
@@ -48,7 +48,7 @@
         "\n",
         "**Answer:** The term \"base class\" in inheritance refers to the parent class; the class from we can inherit the properties and attributes and use it in another class.\n",
         "\n",
-        "The term \"derived class\" in inheritance refers to the child class; the class which inherits the properties and attributes from the paremt class and use it further."
+        "The term \"derived class\" in inheritance refers to the child class; the class which inherits the properties and attributes from the parent class and uses it further."
       ],
       "metadata": {
         "id": "gDEp9ph_443f"
@@ -60,13 +60,13 @@
         "4. What is the significance of the \"protected\" access modifier in inheritance? How does\n",
         "it differ from \"private\" and \"public\" modifiers?\n",
         "\n",
-        "**Answer:** The **\"protected\"** access modifiers lets the user access the properties or attributes of a base class only in the same class or the dervied class. Basically it provides a a security level which any other class cannot access. We denote protected access modfier by adding single underscore as prefix to the variable name. Syntax example : _protectedvariable.\n",
+        "**Answer:** The **\"protected\"** access modifiers lets the user access the properties or attributes of a base class only in the same class or the derived class. Basically, it provides a a security level which any other class cannot access. We denote protected access modfier by adding single underscore as prefix to the variable name. Syntax example : _protectedvariable.\n",
         "\n",
-        "The **\"private\"** access modifiers lets the user access the properties or attributes in the same class only, it cannot be used from outside the class.\n",
-        "It is most secured access modifier compared to other modifiers. We denote privare access modfier by adding double underscore as prefix to the variable name. Syntax example : __privatevariable.\n",
+        "The **\"private\"** access modifiers let the user access the properties or attributes in the same class only, it cannot be used from outside the class.\n",
+        "It is the most secured access modifier compared to other modifiers. We denote the private access modifier by adding a double underscore as a prefix to the variable name. Syntax example : __privatevariable.\n",
         "\n",
         "\n",
-        "The **\"public\"** access modifiers lets the user access the properties or attributes from any part of the program flow."
+        "The **\"public\"** access modifiers let the user access the properties or attributes from any part of the program flow."
       ],
       "metadata": {
         "id": "1Y8RxSnnXbaK"
@@ -75,7 +75,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Below code has been written for better understanding of the access modifiers."
+        "Below code has been written for a better understanding of the access modifiers."
       ],
       "metadata": {
         "id": "9C84QKc8vtOW"
